[gd_scene load_steps=6 format=3 uid="uid://cinv001"]

[ext_resource type="Script" path="res://scripts/ui/InventoryUI.gd" id="1_inv"]
[ext_resource type="Texture2D" path="res://gfx/ui/frames/frame_panel.png" id="2_frame"]
[ext_resource type="Texture2D" path="res://gfx/ui/slots/slot_normal.png" id="3_slot"]
[ext_resource type="Texture2D" path="res://gfx/ui/slots/slot_selected.png" id="4_slot_sel"]
[ext_resource type="Texture2D" path="res://gfx/ui/icons/icon_cross.png" id="5_close"]

[node name="InventoryUI" type="CanvasLayer"]
layer = 10
script = ExtResource("1_inv")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.4)

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Panel" type="NinePatchRect" parent="CenterContainer"]
layout_mode = 2
custom_minimum_size = Vector2(400, 340)
texture = ExtResource("2_frame")
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Header" type="HBoxContainer" parent="CenterContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="CenterContainer/Panel/MarginContainer/VBoxContainer/Header"]
layout_mode = 2
size_flags_horizontal = 3
text = "Inventory"

[node name="CloseButton" type="TextureButton" parent="CenterContainer/Panel/MarginContainer/VBoxContainer/Header"]
layout_mode = 2
texture_normal = ExtResource("5_close")

[node name="HotbarLabel" type="Label" parent="CenterContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Hotbar"

[node name="HotbarGrid" type="GridContainer" parent="CenterContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
columns = 9
theme_override_constants/h_separation = 2
theme_override_constants/v_separation = 2

[node name="Separator" type="HSeparator" parent="CenterContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="BagLabel" type="Label" parent="CenterContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Bag"

[node name="InventoryGrid" type="GridContainer" parent="CenterContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
columns = 9
theme_override_constants/h_separation = 2
theme_override_constants/v_separation = 2
